--- a/public/ar/navigate.html
+++ b/public/ar/navigate.html
@@ -16,7 +16,7 @@
             src: url('makinas4/Makinas-4-Square.otf');
         }
         body{
-            background-image: url(photos/backimage.jpg);
+            background-image: url(photos/backimage.webp);
             background-size: contain;
             text-align: center;
             font-family:'myfont';
