--- a/public/ar/navigate.html
+++ b/public/ar/navigate.html
@@ -9,17 +9,15 @@
     <script src="./navigate.js"></script>
     
     <style>
-        @font-face{
-            font-family: 'myfont';
 
-            src: url('makinas4/Makinas-4-Flat.otf');
-        }
+
         body{
             background-image: url(./navigate/photos/backimage.webp);
             background-size: contain;
             text-align: center;
             font-family:'myfont';
             color: white;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
         img{
             width: 50%;
