--- a/public/ar/navigate.html
+++ b/public/ar/navigate.html
@@ -61,12 +61,12 @@
         <h2>目的地を選択してください</h2>
 
         <div class="main">
-            <div class="contents1" id="PC">
+            <div class="contents1" id="pc">
                  <h3>講義（PC同好会）</h3>
                  <img src="./navigate/photos/pc.webp">
                  <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
                 </div>
-            <div class="contents2" id="VR">
+            <div class="contents2" id="vr">
                 <h3>VRジェットコースター</h3>
                 <img src="./navigate/photos/vr.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -74,12 +74,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="音楽">
+            <div class="contents1" id="music">
             <h3>音楽会</h3> 
             <img src="./navigate/photos/ongakukai.webp">
             <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
          </div>
-        <div class="contents2" id="高校入試">
+        <div class="contents2" id="exam">
             <h3>高校入試</h3>
             <img src="./navigate/photos/koukou.webp">
             <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -87,12 +87,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="喫茶">
+            <div class="contents1" id="cafe">
                 <h3>喫茶</h3>
                 <img src="./navigate/photos/kissa.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="脱出">
+            <div class="contents2" id="survive">
                 <h3>脱出ゲーム</h3>
                 <img src="./navigate/photos/dassyutu.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -100,12 +100,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="ジェット">
+            <div class="contents1" id="jet">
                 <h3>ジェットコースター</h3>
                 <img src="./navigate/photos/jetto.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="縁日"> 
+            <div class="contents2" id="fes"> 
                 <h3>縁日</h3>
                 <img src="./navigate/photos/ennniti.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -114,12 +114,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="写真">
+            <div class="contents1" id="pic">
                 <h3>写真部</h3>
                 <img src="./navigate/photos/shashinn.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="美術">
+            <div class="contents2" id="art">
                 <h3>美術部</h3>
                 <img src="./navigate/photos/bizyutu.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -127,25 +127,25 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="将棋">
+            <div class="contents1" id="shogi">
                 <h3>将棋部</h3>
                 <img src="./navigate/photos/shougi.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="物理">
+            <div class="contents2" id="phy">
                 <h3>物理部</h3>
                 <img src="./navigate/photos/buturi.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
         </div>
 
-        <div class="main" id="地歴">
+        <div class="main" id="geo">
             <div class="contents1">
                 <h3>地歴部</h3>
                 <img src="./navigate/photos/tireki.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="文芸">
+            <div class="contents2" id="lit">
                 <h3>文芸部＆図書委員</h3>
                 <img src="./navigate/photos/bunngeitosho.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -153,12 +153,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="天文">
+            <div class="contents1" id="astro">
                 <h3>天文部</h3>
                 <img src="./navigate/photos/nopicture.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="科学">
+            <div class="contents2" id="chem">
                 <h3>科学部</h3>
                 <img src="./navigate/photos/kagaku.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -166,12 +166,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="ESS">
+            <div class="contents1" id="ess">
                 <h3>ESS部</h3>
                 <img src="./navigate/photos/ess.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="生物">
+            <div class="contents2" id="bio">
                 <h3>生物部</h3>
                 <img src="./navigate/photos/seibutubu.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -180,13 +180,13 @@
 
 
         <div class="main">
-            <div class="contents1" id="アンサンブル">
+            <div class="contents1" id="ans">
                 <h3>アンサンブル部</h3>
                 <img src="./navigate/photos/annsannburu.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
                 
             </div>
-            <div class="contents2" id="数学">
+            <div class="contents2" id="math">
                 <h3>数学同好会</h3>
                 <img src="./navigate/photos/suugaku.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -195,12 +195,12 @@
 
 
         <div class="main">
-            <div class="contents1" id="奇術">
+            <div class="contents1" id="magic">
                 <h3>奇術同好会</h3>
                 <img src="./navigate/photos/kizyutu.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="鉄道">
+            <div class="contents2" id="train">
                 <h3>鉄道同好会</h3>
                 <img src="./navigate/photos/tetudou.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -208,12 +208,12 @@
         </div>
 
         <div class="main">
-            <div class="contents1" id="旅行">
+            <div class="contents1" id="trip">
                 <h3>旅行同好会</h3>
                 <img src="./navigate/photos/ryokou.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="スプラ">
+            <div class="contents2" id="spla">
                 <h3>スプラトゥーン同好会</h3>
                 <img src="./navigate/photos/splatoon.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
@@ -221,7 +221,7 @@
         </div>
         
         <div class="main">
-            <div class="contents1" id="軽音">
+            <div class="contents1" id="band">
         <h3>軽音同好会</h3>
                 <img src="./navigate/photos/nopicture.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>  
