--- a/public/ar/index.html
+++ b/public/ar/index.html
@@ -34,7 +34,7 @@
     
             <!-- マーカーの.pattファイルを読み込む -->
             <!-- 以下のサイトで変更可　https://jeromeetienne.github.io/AR.js/three.js/examples/marker-training/examples/generator.html -->
-            <a-marker type="pattern" id="ARmarker" url="./model/marker/marker.patt">
+            <a-marker type="pattern" id="ARmarker" url="./model/marker/">
                 <!-- 3Dモデルを呼び出す -->
                 <a-entity gltf-model="#arrow" id="model_arrow"></a-entity>
             </a-marker>
