--- a/public/ar/navigate.html
+++ b/public/ar/navigate.html
@@ -145,7 +145,7 @@
                 <img src="./navigate/photos/tireki.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
             </div>
-            <div class="contents2" id="lit">
+            <div class="contents2" id="lib">
                 <h3>文芸部＆図書委員</h3>
                 <img src="./navigate/photos/bunngeitosho.webp">
                 <a href="#"><img src="./navigate/photos/navigatebottun.webp"></a>
