--- a/public/ar/index.html
+++ b/public/ar/index.html
@@ -29,7 +29,7 @@
 	    
             <!-- 3DCGモデルを読み込む -->
             <a-assets>
-                <a-asset-item id="arrow" src="./model/3Dmodel/arrow_"></a-asset-item>
+                <a-asset-item id="arrow" src="./model/3Dmodel/arrow"></a-asset-item>
             </a-assets>
     
             <!-- マーカーの.pattファイルを読み込む -->
