--- a/public/ar/index.html
+++ b/public/ar/index.html
@@ -28,7 +28,7 @@
         <a-scene embedded arjs vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;">
 	    
             <!-- 3DCGモデルを読み込む -->
-            <a-assets>
+            <a-assets id="arrow_assets">
                 <!-- <a-asset-item id="arrow" src="./model/3Dmodel/arrow"></a-asset-item> -->
             </a-assets>
     
